--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -5,7 +5,7 @@
         android:drawable="@color/white" />
 
     <item
-        android:drawable="@drawable/splash2" android:gravity="center"  />
+        android:drawable="@drawable/ic_splash2" android:gravity="center"  />
 
 
 </layer-list>
